NUVOLAR_Excercise/force-app/main/default/objects/NV_obj_flightData__c/NV_obj_flightData__c.object-meta.xml
<CustomObject>
    <description>Object with stores every planned flight and its details.</description>
    <label>Flight History</label>
    <nameField>
        <label>Flight History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>