NUVOLAR_Excercise/force-app/main/default/objects/NV_obj_flightData__c/fields/NV_fld_arrival__c.field-meta.xml
<CustomField>
    <fullName>NV_fld_arrival__c</fullName>
    <label>Arrival</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>