NUVOLAR_Excercise/force-app/main/default/objects/NV_obj_flightData__c/fields/NV_fld_distance__c.field-meta.xml
<CustomField>
    <fullName>NV_fld_distance__c</fullName>
    <label>Distance (KM)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>